<resources>
    <string name="app_name">Monitoria de Vendas</string>
    <string name="acessar">Acessar</string>
    <string name="registrar">Registrar</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="senha_invalida">Senha invalida!</string>
    <string name="campo_vazio">Campo obrigatorio!</string>
    <string name="email_invalido">Email invalido</string>
    <string name="nome_invalido">Nome invalido</string>
    <string name="criando_supervisor">Criando Supervisor</string>
    <string name="aguarde">Aguarde...</string>
    <string name="registrando">Registrando</string>
    <string name="autenticando">Autenticando</string>
    <string name="dados_invalidos">Dados Invalidos!</string>
    <string name="novo_revendedor">     Nova Revendedora</string>
    <string name="adicionar">Adicionar</string>
    <string name="cancelar">Cancelar</string>
    <string name="criando_conta">Criando conta</string>
    <string name="usuario_senha_invalidos">Usuário ou senha inválidos.</string>
    <string name="produto">Nome</string>
    <string name="preco">Preço:</string>

    <!--    <string name="cat_0">-&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;</string>
    <string name="cat_1">Fragrâncias</string>
    <string name="cat_2">Maquiagem</string>
    <string name="cat_3">Pele</string>
    <string name="cat_4">Corpo &amp; Sol</string>
    <string name="cat_5">Outros</string>-->
    <string name="gerenciar">Gerenciar</string>
    <string name="vendas">Vendas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quantidade_estoque">Quantidade</string>


    <string name="bs_header">Select image source</string>
    <string name="bs_gallery">Select from gallery</string>
    <string name="bs_camera">Select from camera</string>
    <string name="bs_cancel">Cancel</string>
    <string name="estoque">Estoque:</string>
    <string name="estat_sticas">Estatísticas</string>
    <string name="revendedoras">Revendedoras</string>
    <string name="quantidade_disponivel"> Disponível:</string>
    <string name="mensagem_produto_ja_adicionado">Este produto já foi adicionado para venda!</string>
    <string name="quantidade">Quantidade:</string>
    <string name="selecione_produtos">Selecione os produtos</string>

    <string name="atualizar">Atualizar</string>
    <string name="supervisora">supervisora</string>
    <string name="perfil">Perfil</string>
    <string name="disponiveis_a_venda">Itens à venda: </string>
    <string name="estoque_menu">Estoque</string>
    <string name="estoque_insuficiente">Estoque insuficiente!</string>
    <string name="vendidos">Vendidos:</string>
    <string name="produtos">Produtos</string>
    <string name="consultar_vendas">Consultar vendas</string>
    <string name="remover_revendedora">Remover</string>
    <string name="adicionar_produtos">Adicionar produtos</string>
    <string name="finalizar_venda">Finalizar venda</string>
    <string name="selecione_o_produto">Selecione o produto</string>
    <string name="selecione_o_produto_error">Necessário selecionar um produto</string>
    <string name="quantidade_erro">Informe a quantidade</string>
    <string name="quantidade_indisponivel">Quantidade indisponível</string>
    <string name="itens_a_venda">Ítens a venda: </string>
    <string name="description">Servindo como o sucessor 360 Challenge Stradale, o Scuderia, revelado por Michael Schumacher no Salão do Automóvel de Frankfurt 2008, promete competir com carros como Porsche-RS e o Lamborghini Gallardo SE, é 115 kg mais leve do que o F430 padrão e o motor é 22,3 cv mais potente (agora são 513,1 a 8550 RPM). Assim a relação do peso-potência foi reduzida de 2.93 kg/cv para 2.35 kg/cv. Além do peso reduzido, a transmissão manual seqüencial da Scuderia ganha o software melhorado de “Superfast III” por deslocamentos mais rápidos em 55 milissegundos. Um novo sistema combina o controle da tração e da estabilidade da F1-Track com o diferencial eletrônico de E-Drifft.</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="title_activity_editar_perfil_revendedor">EditarPerfilRevendedorActivity</string>
    <string name="numero">Numero</string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="quantidade_acancelar">Quantidade à cancelar: </string>


</resources>
