<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tecnoia.matheus.financascosmeticos.revendedor.NovaVendaFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_lista_produtos_estoque"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:popupTheme="@style/AppTheme"
        app:subtitleTextColor="@android:color/white"
        app:theme="@style/ToolbarColoredBackArrow"
        app:title="Nova Venda"
        app:titleTextColor="@android:color/white" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.11"
            android:orientation="vertical">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/produtos" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/selecione_o_produto" android:id="@+id/text_seleciona_produto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"

                    android:layout_margin="15dp"
                    android:layout_weight="2"
                    android:drawableEnd="@drawable/ic_action_arrow_baixo"
                    android:gravity="center_vertical"
                    android:maxLength="40"
                    android:textSize="@dimen/album_title" />


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quantidade" />

                    <EditText
                        android:id="@+id/edit_quantidade"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="3" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/buttonAdicionarProdutos"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:drawableEnd="@drawable/img_buttom"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/adicionar_produtos" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:orientation="vertical">

            <ListView
                android:id="@+id/list_view_produtos_separacao"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.1" />

            <Button
                android:id="@+id/buttomFinalizarVenda"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_margin="10dp"
                android:text="@string/finalizar_venda" />


        </LinearLayout>


        <!--&lt;!&ndash; TODO: Update blank fragment layout &ndash;&gt;
        -->
    </LinearLayout>

</LinearLayout>