<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    tools:showIn="@layout/content_nova_venda">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.12"
            android:orientation="vertical">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/produtos" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_seleciona_produto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="15dp"

                    android:layout_weight="2"
                    android:drawableEnd="@drawable/ic_action_arrow_baixo"
                    android:gravity="center_vertical"
                    android:maxLength="40"
                    android:text="@string/selecione_o_produto"
                    android:textSize="@dimen/album_title" />


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quantidade" />

                    <EditText
                        android:id="@+id/edit_quantidade"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="3" />

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button

                    android:id="@+id/buttonAdicionarProdutos"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:drawableEnd="@drawable/img_buttom"
                    android:text="@string/adicionar_produtos" />

            </LinearLayout>
        </LinearLayout>



            <ListView
                android:layout_height="250dp"
                android:layout_width="match_parent"
                android:id="@+id/list_view_produtos_separacao"



                android:padding="10dp" />






        <!--&lt;!&ndash; TODO: Update blank fragment layout &ndash;&gt;
        -->
    </LinearLayout>

</ScrollView>