<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:textColor="@color/album_title"
            android:textSize="@dimen/album_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/estoque" />

        <TextView
            android:id="@+id/unidades_disponiveis_dialog_vendas"
            android:textColor="@color/album_title"
            android:textSize="@dimen/album_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:textColor="@color/album_title"
            android:textSize="@dimen/album_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/preco" />

        <TextView
            android:id="@+id/preco_dialog_vendas"
            android:textColor="@color/album_title"
            android:textSize="@dimen/album_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:textColor="@color/album_title"
            android:textSize="@dimen/album_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/disponiveis_a_venda" />

        <EditText


            android:id="@+id/edit_fornecidos_vendas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"

            android:inputType="number"
            android:singleLine="true" />
        <TextView
            android:gravity="end"
            android:textColor="@color/album_title"
            android:textSize="@dimen/album_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="Unds" />

    </LinearLayout>



</LinearLayout>

