<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@drawable/produto_logo" />

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/edit_nome_produto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edit_preco_produto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/preco"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:text="1"
                android:id="@+id/edit_quantidade_produto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantidade_estoque"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:visibility="gone"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Categoria: "
            android:textSize="18sp" />

        <Spinner
            android:visibility="gone"
            android:layout_marginBottom="8dp"
            android:id="@+id/spinner_categoria_produto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp">


        </Spinner>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_adicionar_produto"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:text="Adicionar" />



    </LinearLayout>
</ScrollView>

